<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/cb_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_hide_stats" />

    <CheckBox
        android:id="@+id/cb_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_hide_grid" />

    <CheckBox
        android:id="@+id/cb_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_hide_axis" />
    
    <CheckBox
        android:id="@+id/cb_aabb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_hide_aabb" />

    <CheckBox
        android:id="@+id/cb_skybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_sky_box" />

</LinearLayout>
